InterSpec_resources/InterSpec.css
/* ... */
/* .btn-group is for WSplitButton */
.btn-group.LightButton > button.Wt-btn
{
  border-top: none;
  border-bottom: none;
  margin-top: -1px;
  padding-top: 3px;
}

.btn-group.LightButton > button.Wt-btn.dropdown-toggle.LightButton
{
  border-right: none;
  border-radius: 0px;
}

.btn-group.LightButton > button.Wt-btn.with-label.LightButton
{
  border: none;
}

.btn-group > .Wt-btn.dropdown-toggle
{
  width: 20px;
  background-image: url('../InterSpec_resources/images/bullet_arrow_down.png');
  background-position: right center;
  background-repeat: no-repeat, no-repeat;
}

.Wt-icon {
  display: inline-block;
  padding: 0px 8px;
  margin-right: 8px;
  background-repeat: no-repeat;
  background-position: center left;
  height: 16px;
}



/*
.UndoIcon,.UndoIcon:hover
{
  background-image: url('../InterSpec_resources/images/arrow_undo.png');
  background-position: 3px center;
  background-repeat: no-repeat;
  padding-left: 21px;
}
*/


.FooterHelpBtn
{
  margin-top: 2px;
  width: 20px;
  height: 20px;
  cursor:pointer;
  opacity: 0.6;
}

.FooterHelpBtn:hover
{
  opacity: 1.0;
}

/* A question mark help button suitable for displaying in the content of a tool (e.g., in the tools tabs).
 When making a content help button, you should also add the .Wt-icon styleclass to help handle color-themeing.
 */
.ContentHelpBtn
{
  background-image: url('images/help_minimal.svg');
  background-repeat: no-repeat;
  background-position: center;
  height: 16px;
  width: 16px;
  
  cursor:pointer;
  opacity: 0.6;
  padding: 0;
}

.ContentHelpBtn:hover
{
  opacity: 1;
}

/* Make so .ContentHelpBtn buttons are not shown when in a Wt-dialog since we put a .FooterHelpBtn in the footer of dialog */
.Wt-dialog .ContentHelpBtn
{
  display: none;
}

.modal-footer 
{
  padding-top: 13px;
  padding-left: 10px;
  padding-right: 10px;
  
  margin-bottom: 5px;
  text-align: right;
  white-space:nowrap;
  /* height: 50px; */
/*  border: 2px solid green;*/
/*  background-color: #f5f5f5; */
  border-top: 1px solid #ddd;
  -webkit-border-radius: 0 0 0px 0px;
     -moz-border-radius: 0 0 0px 0px;
          border-radius: 0 0 0px 0px;
  *zoom: 1;
  -webkit-box-shadow: inset 0 1px 0 #ffffff;
     -moz-box-shadow: inset 0 1px 0 #ffffff;
          box-shadow: inset 0 1px 0 #ffffff;
}

.modal-footer button,.modal-footer button:hover{
  margin-right:2px;
  margin-left:2px;
}


.NeutDetCbItem
{
  color: blue;
}


.DialogClose
{
  float: right;
}


.helpPopupMainContainer {
  opacity:1.0;
  border: 0px solid black;

}

.helpPopupMainContainer2 {
  position:relative;
  opacity:1.0;
  border: 0px solid black;
  left:15px;
  top:-8px;
}



.toolTip {
font-size: 80%;
opacity:1.0;
top:-8px;
left:15px;
background-color: rgb(253, 255, 218);
border: 1px solid #73a7f0;
width: 200px;
height: 100px;
border-radius: 4px;
-moz-border-radius: 4px;
-webkit-border-radius: 4px;
box-shadow: 0px 0px 8px -1px black;
-moz-box-shadow: 0px 0px 8px -1px black;
-webkit-box-shadow: 0px 0px 8px -1px black;
}

.toolTip p {
padding-left:10px;
}



.UseInfoStack
{
  border-left: solid 1px #e1e1e1;
  margin-left: 5px;
  padding-left: 10px;
}

.UseInfoItem
{
  margin-left: 10px;
  margin-right: 5px;
  overflow-y: auto;
}

.UseInfoTabsWidget
{
}


.UseInfoTabsStack
{
  border: 1px solid gray;
  border-top: none;
}

/* .SideMenu holds all the size information for the elements, while .VerticalNavMenu holds the styling
 (color, hover, etc).
*/
.SideMenu
{
  padding-left: 10px;
  padding-right:10px;
  font-size: 13px;
  width: 12.5em;
}

.SideMenu li
{
  font-weight: bold;
  height: 2.5em;
  padding-top: 8px;
  padding-bottom: 8px;
  margin-top: 2px;
  margin-bottom: 2px;
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  border-radius: 5px;
}

.SideMenu a
{
  padding-left: 10px;
  padding-right: 5px;
}


/* For navigation-style menu, we break the CSS into two parts:
 The coloring part: .HeavyNavMenu and .LightNavMenu . These are affected by the color theming (e.g,
   dark.css has to override).  .HeavyNavMenu is dark buttons and light text in default "light" color
   theme
 The actual layout part: .VerticalNavMenu
 
 */

.HeavyNavMenu li
{
  color: #ffffff;
}

.HeavyNavMenu li.item > a
{
  color: white;
}

.HeavyNavMenu li.itemselected > a
{
  color: #E0F5FF;
}

.HeavyNavMenu li :hover
{
  border-color: #eeeeee #eeeeee #dddddd;
}

.HeavyNavMenu li.itemselected
{
  background: #C6C6C6;
}

.HeavyNavMenu li.itemselected:hover
{
}

.HeavyNavMenu li.item
{
  background: #888888;
}

.HeavyNavMenu li.item:hover
{
  background: #9B9B9B;
}


.LightNavMenu li
{
  /* color: #ffffff; */
  border: 1px solid #e1e1e1;
}

.LightNavMenu li.item > a
{
  /* color: white; */
}

.LightNavMenu li.itemselected > a
{
  color: #E0F5FF;
}

.LightNavMenu li :hover
{
  border-color: #eeeeee #eeeeee #dddddd;
}

.LightNavMenu li.itemselected
{
  background: #C6C6C6;
}

.LightNavMenu li.itemselected:hover
{
}

.LightNavMenu li.item
{
  /* background: #888888; */
}

.HeavyNavMenu li.item:hover
{
  background: #9B9B9B;
}



.VerticalNavMenu
{
  margin: 0px;
  list-style-type: none;
  overflow: auto;
}

.VerticalNavMenu > li
{
}

.VerticalNavMenu li
{
  vertical-align: middle;
}

.VerticalNavMenu > .Wt-separator {
    height: 0.25em;
    -webkit-border-radius: 0;
    -moz-border-radius: 0;
    border-radius: 0;
    padding-top: 0px;
    padding-bottom: 0px;
}

.VerticalNavMenu a
{
  cursor: pointer;
}


/*fix the menu item links that the SRB CSS messes up*/
ul.Wt-popupmenu > li > a > span > span
{ 
  font-weight: normal;
  color: black;
}

ul.Wt-popupmenu > li.active > a > span > span
{
 color: #E0F5FF;
}

ul.Wt-popupmenu > li > a > span > span:hover
{
 color: white;
}



.SampleSpecRow
{
  overflow: hidden;
}

.SampleSpecText
{
  margin-top: auto;
  margin-bottom: auto;
  margin-left: 5px;
}

.SampleSpecLoadBtn
{
  display: none;
}
/* ... */

